@@ -435,6 +435,7 @@ Dinu Gherman
 Jonathan Giddy
 Johannes Gijsbers
 Michael Gilfix
+Julian Gindi
 Yannick Gingras
 Matt Giuca
 Wim Glenn
